[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'
[profile.release]
panic = 'unwind'

[[bin]]
name = 'starlog'
path = 'src/main.rs'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.1'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '06ff2397911f24ad57b3d307f441278a31e6e34b'
