[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.starlog-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '563096ee8ec2dd73144a9b600ef085ace30e6c49'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'starlog'
version = '1.0.0'

[[bin]]
name = 'starlog'
path = 'src/main.rs'
