[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime-wasm'
version = '0.9.0'

[features]
default = []
std = ['node-template-runtime/std']
[dependencies.node-template-runtime]
default-features = false
path = '..'
