[profile.release]
lto = true
panic = 'abort'
[dependencies.starlog-runtime]
default-features = false
path = '..'

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'starlog-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['starlog-runtime/std']
